# mav_swarm_commander

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: swarm_commander.cfg
example/: CppAD_Ipopt.cpp  CppAD_started.cpp  kick
include/mav_swarm_commander/: SwarmCommander.h  cost_functionals.h  line_segment.h  path.h  state_space_ODE.h  trajectory.h
src/: SwarmCommander.cpp  SwarmCommanderUtility.cpp  line_segment.cpp  path.cpp  trajectory.cpp
src/nodes/: swarm_commander_node.cpp
