<?xml version="1.0"?>
<package format="2">
  <name>mav_swarm_commander</name>
  <version>0.0.1</version>
  <description>The mav_swarm_commander package for the drone swarming</description>

  <maintainer email="hesham.hendy@outlook.de"></maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mav_commander</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>mav_commander</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>backward_ros</depend>
  <depend>manager_msgs</depend>
  <depend>esdf_map</depend>

</package>
